# RoboCup-Home

./: README.md
RobocupHome_Tutorial5_GroupB/: Readme.txt
RobocupHome_Tutorial5_GroupB/config/: mmap.yaml  submap_0.pgm
RobocupHome_Tutorial5_GroupB/map2floor/: map.pgm
RobocupHome_Tutorial5_GroupB/src/god_watcher/include/: god_watcher.h
RobocupHome_Tutorial5_GroupB/src/god_watcher/launch/: god_watcher.launch  god_watcher1.launch
RobocupHome_Tutorial5_GroupB/src/god_watcher/src/: god_watcher.cpp
RobocupHome_Tutorial5_GroupB/src/manipulation/: CMakeLists.txt
RobocupHome_Tutorial5_GroupB/src/manipulation/config/: pick_and_place_params.yaml
RobocupHome_Tutorial5_GroupB/src/manipulation/launch/: pick_demo.launch
RobocupHome_Tutorial5_GroupB/src/manipulation/scripts/: pick_and_place_server.py  pick_client.py
RobocupHome_Tutorial5_GroupB/src/navigation/src/: simple_navigation_goals.cpp  simple_navigation_goals.h
RobocupHome_Tutorial5_GroupB/src/perception_msgs/: CMakeLists.txt
RobocupHome_Tutorial5_GroupB/src/perception_package/: CMakeLists.txt  package.xml
RobocupHome_Tutorial5_GroupB/src/perception_package/src/: draw_boundingbox.cpp  from2dto3d.cpp  place_msg.cpp
Yinan_Shi_roboCupHome_tutorial1/: readMe.txt
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/: CMakeLists.txt
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/include/turtle_vis/myClass/: TurtleClass.h
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/launch/: TurtleVis.launch
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/launch/rvizConfigs/: turtle_gains.yaml
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_vis_node.cpp
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/src/solutions/myClass/: TurtleClass.cpp
Yinan_Shi_roboCupHome_tutorial1/turtle_vis/srv/: send_desired_pose.srv
Yinan_Shi_roboCupHome_tutorial2/T2_E1/: Ex1.world
Yinan_Shi_roboCupHome_tutorial2/T2_E2/: TIAGo.rviz
Yinan_Shi_roboCupHome_tutorial2/T2_E3/: README.txt
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/: CMakeLists.txt  package.xml
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/include/turtle_vis/myClass/: TurtleClass.h
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/launch/: TiagoVis.launch  TurtleVis.launch
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/launch/rvizConfigs/: turtle_gains.yaml
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp
Yinan_Shi_roboCupHome_tutorial2/T2_E3/turtle_vis/src/solutions/myClass/: TurtleClass.cpp
Yinan_Shi_roboCupHome_tutorial3/: ReadMe.txt
Yinan_Shi_roboCupHome_tutorial3/task_1/small_office/: submap_0.pgm
Yinan_Shi_roboCupHome_tutorial3/task_1/tutorial_office/: map.pgm
Yinan_Shi_roboCupHome_tutorial3/task_2/simple_navigation_goals/: CMakeLists.txt  package.xml
Yinan_Shi_roboCupHome_tutorial3/task_2/simple_navigation_goals/include/simple_navigation_goals/: simple_plan_navi.h
Yinan_Shi_roboCupHome_tutorial3/task_2/simple_navigation_goals/launch/: navigation.launch
Yinan_Shi_roboCupHome_tutorial3/task_2/simple_navigation_goals/src/: simple_navigation_goals.cpp
final/workspace/Finalproject/: frames.gv
final/workspace/Finalproject/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
final/workspace/Finalproject/devel/include/all_msgs/: Box.h  Boxes.h  Object.h  ObjectArray.h  Rect.h  send_box.h  send_boxRequest.h  send_boxResponse.h  send_flags.h  send_flagsRequest.h  send_flagsResponse.h  send_pos.h  send_posRequest.h  send_posResponse.h  send_pose.h  send_poseRequest.h  send_poseResponse.h
final/workspace/Finalproject/devel/include/manipulation/: PickUpPoseAction.h  PickUpPoseActionFeedback.h  PickUpPoseActionGoal.h  PickUpPoseActionResult.h  PickUpPoseFeedback.h  PickUpPoseGoal.h  PickUpPoseResult.h
final/workspace/Finalproject/devel/include/tum_alle_athome_speech_msgs/: msgTTSState.h  srvGenerateAnswer.h  srvGenerateAnswerRequest.h  srvGenerateAnswerResponse.h  srvQuestion.h  srvQuestionRequest.h  srvQuestionResponse.h  srvTTSRequest.h  srvTTSResponse.h
final/workspace/Finalproject/devel/include/tum_alle_common_msgs/: GraspSrv.h  GraspSrvRequest.h  GraspSrvResponse.h  msg2DPrediction.h  msg2DRecognition.h  msg3DPrediction.h  msg3DRecognition.h  msg3DTracking.h  msgCategorisedSpeech.h  msgFreeSpace.h  msgGraspInfo.h  msgHotwordCommand.h  msgRegionOfInterest3D.h  srvAnswerReasoning.h  srvAnswerReasoningRequest.h  (+60 more)
final/workspace/ref/devel/: .catkin  .rosinstall  setup.sh
final/workspace/ref/src/detection/: CMakeLists.txt
final/workspace/smallgg/God_watcher/: CMakeLists.txt  package.xml
final/workspace/smallgg/God_watcher/include/: god_watcher.h  head_tracking_obj.h  head_tracking_people.h
final/workspace/smallgg/God_watcher/src/: god_watcher.cpp
final/workspace/smallgg/manipulation/scripts/: pick_client.py
final/workspace/smallgg/perception/: CMakeLists.txt  package.xml
final/workspace/smallgg/perception/src/: DepthProcessing.cpp  depth2pointcloud.cpp  object_detection.cpp  object_sending.cpp  online_collecting.cpp  online_learning.cpp  predict.cpp  svm_trained.xml  yolo_roi.cpp
final/workspace/smallgg/test_speech/: CMakeLists.txt
final/workspace/smallgg/test_speech/src/: tts.cpp
final/workspace/speech/devel/: .rosinstall  _setup_util.py  setup.sh
final/workspace/speech/src/test_speech/: package.xml
final/workspace/speech/src/test_speech/src/: tts.cpp
final/workspace/tutorial5/devel/: .catkin  .rosinstall  setup.sh
final/workspace/tutorial5/src/navigation/: CMakeLists.txt
final/workspace/tutorial5/src/perception_msgs/: package.xml
final/workspace/tutorial5/src/tum_alle_athome_speech/: README.md
object_recognition/: ReadMe.txt
object_recognition/image_transformer/: CMakeLists.txt  package.xml
object_recognition/image_transformer/src/: image_transformer.cpp
object_recognition/plane_segmentation/: CMakeLists.txt
object_recognition/plane_segmentation/src/: PlaneSegmentation.cpp
object_recognition/position_retrieval/: CMakeLists.txt  package.xml
object_recognition/position_retrieval/src/: position_retrieval.cpp
(+577 files in other folders)
