<?xml version="1.0"?>
<package>
  <name>test_speech</name>
  <version>0.0.0</version>
  <description>integration bring me drink</description>
  <maintainer email="yumin@todo.todo">ilya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <!--build_depend>json_prolog</build_depend-->
<build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tum_alle_common_msgs</build_depend>
  <build_depend>perception_msgs</build_depend>
    <build_depend>tum_alle_athome_speech_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <!--run_depend>json_prolog</run_depend-->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tum_alle_common_msgs</run_depend>
  <run_depend>perception_msgs</run_depend>
    <build_depend>tum_alle_athome_speech_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
